--- a/views/mainselection.handlebars
+++ b/views/mainselection.handlebars
@@ -67,7 +67,7 @@
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                 <div class="single-banner mb-30">
-                    <a href="product-details.html"><img src="/img/tailor2.jpeg" alt=""></a>
+                    <a href="product-details.html"><img src="/img/tailor_2.jpeg" alt=""></a>
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 col-12">
