--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -91,11 +91,11 @@
                         <div class="account-dropdown">
                             <ul>
 
-                                <li><a href="">Login</a></li>
-                                <li><a href="">Register</a></li>
+                                <li><a href="/custlogin">Login</a></li>
+                                <li><a href="/custregister">Register</a></li>
 
                                 <li><a href=""></a></li>
-                                <li><a href="">Edit Profile</a></li>
+                                <li><a href="/custaccount">Edit Profile</a></li>
                                 <li><a href="">Log Out</a></li>
 
                             </ul>
