--- a/views/mainselection.handlebars
+++ b/views/mainselection.handlebars
@@ -28,7 +28,7 @@
                             <h3 class="animated">Join Our Riders Team</h3>
                             <h1 class="animated">TailorNow <br>Riders</h1>
                             <div class="slider-btn btn-hover">
-                                <a class="animated" href="/Riders_Home">Check it Out!</a>
+                                <a class="animated" href="/homerider">Check it Out!</a>
                             </div>
                         </div>
                     </div>
