--- a/views/rider/rideracct.handlebars
+++ b/views/rider/rideracct.handlebars
@@ -137,7 +137,7 @@
                                                 <div
                                                     class="col-lg-6 col-md-6 d-flex align-items-center justify-content-center">
                                                     <div class="entries-edit-delete text-center">
-                                                        <a class="edit" href="/route_finder">View</a>
+                                                        <a class="edit" href="/rideroutecheck">View</a>
                                                         <a href="#">Cancel</a>
                                                     </div>
                                                 </div>
@@ -174,7 +174,7 @@
                         </div>
                         <div class="panel panel-default single-my-account">
                             <div class="panel-heading my-account-title">
-                                <h3 class="panel-title"><span>4 .</span> <a href="/Rider_OrderHist">Overview of Orders</a></h3>
+                                <h3 class="panel-title"><span>4 .</span> <a href="/riderhist">Overview of Orders</a></h3>
                             </div>
                         </div>
                         <div class="panel panel-default single-my-account">
@@ -200,7 +200,7 @@
                                                 </div>
                                                 <div class="col-lg-6 col-md-6 d-flex align-items-center justify-content-center">
                                                     <div class="entries-edit-delete text-center">
-                                                        <a class="edit" href="/wallet_transfer"> Transfer To Card </a>
+                                                        <a class="edit" href="/rwalletransfer"> Transfer To Card </a>
                                                         <a href="#">Delete Card</a>
                                                     </div>
                                                 </div>
