image updates & changes to links

--- a/views/rider/homerider.handlebars
+++ b/views/rider/homerider.handlebars
@@ -8,7 +8,7 @@
                             <h3 class="animated">Join Our Team </h3>
                             <h1 class="animated">TailorNow Riders Team</h1>
                             <div class="slider-btn-medical btn-hover">
-                                <a class="animated" href="/Register_Rider">Sign Up Here!</a>
+                                <a class="animated" href="/rideregister">Sign Up Here!</a>
                             </div>
                         </div>
                     </div>
