--- a/views/mainselection.handlebars
+++ b/views/mainselection.handlebars
@@ -48,7 +48,7 @@
                             <h3 class="animated">Showcase Your Expertise</h3>
                             <h1 class="animated">TailorNow <br>Tailors</h1>
                             <div class="slider-btn btn-hover">
-                                <a class="animated" href="/Tailor_Main">Start your Journey!</a>
+                                <a class="animated" href="/hometailor">Start your Journey!</a>
                             </div>
                         </div>
                     </div>
