--- a/views/tailor/addproduct1.handlebars
+++ b/views/tailor/addproduct1.handlebars
@@ -74,7 +74,8 @@
                                 <div class="col-lg-12">
                                     <label for="q1category">Category<span style="color:red;">*</span></label>
                                     <ul class="category-select-list" id="q1category" onclick="checkValue()">
-                                        <li><input checked="" id="q1category-0" name="q1category" type="radio" value="textbox"> <label for="q1category-0">Textbox - Open-ended question</label></li>
+                                        <li><input checked="" id="q1category-0" name="q1category" type="radio" value=""> <label for="q1category-0"></label></li>
+                                        <li><input id="q1category-0" name="q1category" type="radio" value="textbox"> <label for="q1category-0">Textbox - Open-ended question</label></li>
                                         <li><input id="q1category-1" name="q1category" type="radio" value="radiobtn"> <label for="q1category-1">Dropdown Menu - Show a list of selections the user can choose from</label></li>
                                     </ul>
 
