--- a/views/customer/productview.handlebars
+++ b/views/customer/productview.handlebars
@@ -52,18 +52,21 @@
                     <form class="contact-form-style" id="my_form" action="" method="post">
                         <div class="pro-details-size-color  ">
                             <div class="pro-details-color-wrap">
-                            <span>Suit Colour</span>
+                            {{#ifCond pdetails.customqn '!=' ""}}
+                            <span>{{pdetails.customqn}}</span>
+                            {{/ifCond}}
                                 <div class="pro-details-color-content">
+                                    {{#ifCond pdetails.customcat '==' "radiobtn"}}
                                     <select id="custom" name="custom" required="">
                                         <option value=""></option>
-                                        
-                                        <option value="Blue">Blue</option>
-                                        
-                                        <option value="Black">Black</option>
-                                        
-                                        <option value="Grey">Grey</option>
-                                        
+                                        {{#each choicesArray}}
+                                            <option value="{{this}}">{{this}}</option>
+                                        {{/each}}                         
                                     </select>
+                                    {{/ifCond}}
+                                    {{#ifCond pdetails.customcat '==' "textbox"}}
+                                        <input type="text" id="fname" name="fname" required>
+                                    {{/ifCond}}
                                 </div>
                             </div>
                         </div>
