--- a/views/customer/productview.handlebars
+++ b/views/customer/productview.handlebars
@@ -65,7 +65,7 @@
                                     </select>
                                     {{/ifCond}}
                                     {{#ifCond pdetails.customcat '==' "textbox"}}
-                                        <input type="text" id="fname" name="fname" required>
+                                        <input type="text" id="custom" name="custom" required>
                                     {{/ifCond}}
                                 </div>
                             </div>
