--- a/views/tailor/addproduct1.handlebars
+++ b/views/tailor/addproduct1.handlebars
@@ -34,7 +34,7 @@
                                 <input id="image" name="image" type="file">
                             </div> --}}
                             <div class="uploader">
-                                <input id="file-upload" type="file" id="fileUpload" name="fileUpload" accept="image/*" />
+                                <input id="file-upload" type="file" name="file-upload" accept="image/*" />
 
                                 <label for="file-upload" id="file-drag">
                                     <img id="file-image" src="#" alt="Preview" class="hidden">
