--- a/views/tailor/addproduct1.handlebars
+++ b/views/tailor/addproduct1.handlebars
@@ -69,7 +69,7 @@
                                 </div>
                                 <div class="col-lg-12">
                                     <label for="q1">Question<span style="color:red;">*</span></label>
-                                    <input id="question" name="question" type="text" value="{{q1}}">
+                                    <input id="question" name="question" type="text" value="{{question}}">
                                 </div>
                                 <div class="col-lg-12">
                                     <label for="q1category">Category<span style="color:red;">*</span></label>
