--- a/views/tailor/editproduct.handlebars
+++ b/views/tailor/editproduct.handlebars
@@ -127,7 +127,7 @@
 <script>
     var fieldNum = 0;
     {{#if pchoices.length}}
-        fieldNum = {{pchoices.length}} - 1;
+        fieldNum = {{pchoices.length}};
     {{/if}}
     window.onload = function() {
         checkValue();
