--- a/views/customer/viewstore.handlebars
+++ b/views/customer/viewstore.handlebars
@@ -37,7 +37,7 @@
                         <div class="col-xl-4 col-md-6 col-lg-4 col-sm-6">
                             <div class="product-wrap mb-25 scroll-zoom">
                                 <div class="product-img">
-                                    <a href="">
+                                    <a href="/view/{{id}}">
                                         <img class="default-img" src="/uploads/products/1.jpg" alt="">
                                         <img class="hover-img" src="/uploads/products/1.jpg" alt="">
                                     </a>
@@ -55,7 +55,7 @@
                                             </div>
                                         
                                         <div class="pro-same-action pro-cart" style="width:100%;">
-                                            <a href="/view/1"><i class="fa fa-info"></i> View Item</a>
+                                            <a href="/view/{{id}}"><i class="fa fa-info"></i> View Item</a>
                                         </div>
 
                                     </div>
