--- a/views/customer/custregister.handlebars
+++ b/views/customer/custregister.handlebars
@@ -23,54 +23,57 @@
           <div id="lg2" class="tab-pane">
             <div class="login-form-container">
               <div class="login-register-form">
-                <form method="POST" action="">
+                <form method="post" action="">
                   <div class="row">
                     <div class="col-lg-6 col-md-6">
                       <div class="form-group">
                         <input type="text" name="first-name" placeholder="First Name"
-                          value="{{request.form.firstname }}">
+                          value="{{firstname}}" required>
                       </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
                       <div class="form-group">
-                        <input type="text" name="last-name" placeholder="Last Name" value="{{request.form.lastname }}">
+                        <input type="text" name="last-name" placeholder="Last Name" value="{{lastname}}" required>
                       </div>
                     </div>
                   </div>
                   <div class="form-group">
-                    <input type="text" name="user-name" placeholder="User Name" value="{{request.form.username }}">
+                    <input type="text" name="user-name" placeholder="User Name" value="{{username}}" required>
                   </div>
                   <div class="form-group">
-                    <input type="text" name="password" placeholder="Password" value="{{request.form.password }}">
+                    <input type="text" name="password" placeholder="Password" value="{{password}}" required>
                   </div>
                   <div class="form-group">
-                    <input type="text" name="address1" placeholder="Address Line 1" value="{{request.form.address }}">
+                    <input type="text" name="password2" placeholder="Password" value="{{password2}}" required>
                   </div>
                   <div class="form-group">
-                    <input type="text" name="address2" placeholder="Address Line 2" value="{{request.form.address2 }}">
+                    <input type="text" name="address1" placeholder="Address Line 1" value="{{address}}" required>
+                  </div>
+                  <div class="form-group">
+                    <input type="text" name="address2" placeholder="Address Line 2" value="{{address2}}" required>
                   </div>
                   <div class="row">
                     <div class="col-lg-6 col-md-6">
                       <div class="form-group">
-                        <input type="text" name="city" placeholder="City" value="{{request.form.city }}">
+                        <input type="text" name="city" placeholder="City" value="{{city}}" required>
                       </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
                       <div class="form-group">
                         <input type="text" name="postal-code" placeholder="Postal Code"
-                          value="{{request.form.postalcode }}">
+                          value="{{postalcode}}" required>
                       </div>
                     </div>
                   </div>
                   <div class="form-group">
-                    <input type="text" name="gender" placeholder="Gender" value="{{request.form.gender }}">
+                    <input type="text" name="gender" placeholder="Gender" value="{{gender}}" required>
                   </div>
                   <div class="form-group">
-                    <input type="text" name="email" placeholder="Email" value="{{request.form.email}}">
+                    <input type="text" name="email" placeholder="Email" value="{{email}}" required>
                   </div>
                   <div class="form-group">
                     <input type="text" name="phone-number" placeholder="Phone Number"
-                      value="{{request.form.phonenumber }}">
+                      value="{{phoneno}}" required>
                   </div>
                   <div class="button-box">
                     <button type="submit"><span>Register</span></button>
