--- a/views/customer/custregister.handlebars
+++ b/views/customer/custregister.handlebars
@@ -27,18 +27,18 @@
                   <div class="row">
                     <div class="col-lg-6 col-md-6">
                       <div class="form-group">
-                        <input type="text" name="first-name" placeholder="First Name"
+                        <input type="text" name="firstname" placeholder="First Name"
                           value="{{firstname}}" required>
                       </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
                       <div class="form-group">
-                        <input type="text" name="last-name" placeholder="Last Name" value="{{lastname}}" required>
+                        <input type="text" name="lastname" placeholder="Last Name" value="{{lastname}}" required>
                       </div>
                     </div>
                   </div>
                   <div class="form-group">
-                    <input type="text" name="user-name" placeholder="User Name" value="{{username}}" required>
+                    <input type="text" name="username" placeholder="User Name" value="{{username}}" required>
                   </div>
                   <div class="form-group">
                     <input type="text" name="password" placeholder="Password" value="{{password}}" required>
@@ -60,7 +60,7 @@
                     </div>
                     <div class="col-lg-6 col-md-6">
                       <div class="form-group">
-                        <input type="text" name="postal-code" placeholder="Postal Code"
+                        <input type="text" name="postalcode" placeholder="Postal Code"
                           value="{{postalcode}}" required>
                       </div>
                     </div>
@@ -72,7 +72,7 @@
                     <input type="text" name="email" placeholder="Email" value="{{email}}" required>
                   </div>
                   <div class="form-group">
-                    <input type="text" name="phone-number" placeholder="Phone Number"
+                    <input type="text" name="phoneno" placeholder="Phone Number"
                       value="{{phoneno}}" required>
                   </div>
                   <div class="button-box">
@@ -88,8 +88,4 @@
       </div>
     </div>
   </div>
-</div>
-</div>
-</div>
-</div>
 </div>
