--- a/views/customer/viewshops.handlebars
+++ b/views/customer/viewshops.handlebars
@@ -25,7 +25,7 @@
                         <div id="shop-1" class="tab-pane active">
                             <div class="row">
                                 <!-- Start of Product List -->
-                                
+                                {{#each shop}}
                                 <div class="col-xl-6 col-md-6 col-lg-6 col-sm-6">
                                     <div class="product-wrap mb-25 scroll-zoom">
                                         <div class="product-img">
@@ -35,7 +35,7 @@
                                             <span class="pink">-30%</span>
                                             <div class="product-action">
                                                 <div class="pro-same-action pro-quickview" style="width:100%;">
-                                                    <a title="Shop here" href="/view/Ah Tong Tailor"><i class="fa fa-eye"></i> Shop here</a>
+                                                    <a title="Shop here" href="/viewshops/Ah Tong Tailor"><i class="fa fa-eye"></i> Shop here</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -49,7 +49,7 @@
                                         </div>
                                     </div>
                                 </div>
-
+                                {{/each}}
                                 <!-- rubbish display for ui only -->
                                 <div class="col-xl-6 col-md-6 col-lg-6 col-sm-6">
                                     <div class="product-wrap mb-25 scroll-zoom">
