--- a/views/customer/viewstore.handlebars
+++ b/views/customer/viewstore.handlebars
@@ -8,7 +8,7 @@
                 <li>
                     <a href="/viewshops">View Shops</a>
                 </li>
-                <li class="active">Ah Tong Tailor {{user_status}}</li>
+                <li class="active">Ah Tong Tailor</li>
             </ul>
         </div>
     </div>
@@ -45,15 +45,14 @@
                                         <span class="pink">-{{discount}}%</span>
                                     {{/ifCond}}
                                     <div class="product-action">
-                                        <!-- this part not showing when user = tailor -->
-                                        
+                                        {{#ifCond ../user_status '==' "tailor"}}
                                             <div class="pro-same-action pro-quickview" style="width:50%;">
                                                 <a href="/tailor/editproduct/{{id}}"><i class="fa fa-pencil"></i> Edit Item</a>
                                             </div>
                                             <div class="pro-same-action pro-wishlist" style="width:50%;">
                                                 <a href="#myModal_{{id}}" data-toggle="modal" data-target="#myModal_{{id}}"><i class="fa fa-trash-o"></i> Delete</a>
                                             </div>
-                                        
+                                        {{/ifCond}}
                                         <div class="pro-same-action pro-cart" style="width:100%;">
                                             <a href="/view/{{id}}"><i class="fa fa-info"></i> View Item</a>
                                         </div>
@@ -61,7 +60,7 @@
                                     </div>
                                 </div>
                                 <div class="product-content text-center">
-                                    <h3><a href="">{{name}}</a></h3>
+                                    <h3><a href="/view/{{id}}">{{name}}</a></h3>
                                     <div class="product-rating">
                                         <span class="fa fa-star" style="color: orange;"></span><span class="fa fa-star" style="color: orange;"></span><span class="fa fa-star" style="color: orange;"></span><span class="fa fa-star"></span><span class="fa fa-star"></span>
                                         3 stars
