image upload unique id

--- a/views/customer/viewstore.handlebars
+++ b/views/customer/viewstore.handlebars
@@ -38,7 +38,7 @@
                             <div class="product-wrap mb-25 scroll-zoom">
                                 <div class="product-img">
                                     <a href="/view/{{id}}">
-                                        <img class="default-img" src="/uploads/products/1.jpg" alt="">
+                                        <img class="default-img" src="/uploads/products/{{image}}" alt="">
                                         <img class="hover-img" src="/uploads/products/1.jpg" alt="">
                                     </a>
                                     {{#ifCond discount '!=' 0}}
