--- a/views/customer/productview.handlebars
+++ b/views/customer/productview.handlebars
@@ -24,7 +24,7 @@
             <div class="col-lg-6 col-md-6">
                 <a href=""><i class="pe-7s-chat"></i> Seek help from {{ pdetails.storename }}</a>
                 <div class="product-details dec-img-wrap">
-                    <img src="/uploads/products/1.jpg" alt="">
+                    <img src="/uploads/products/{{pdetails.image}}" alt="">
                 </div>
             </div>
             <div class="col-lg-6 col-md-6">
